oqct-app/main/default/objects/DC_Data_Type__c/DC_Data_Type__c.object-meta.xml
<CustomObject>
    <description>This object stores the Data Type Configurations for Data Clean App</description>
    <label>DC-Data Type</label>
    <nameField>
        <displayFormat>DC-DT-{0000}</displayFormat>
        <label>DC-Data Type Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DC-Data Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>