oqct-app/main/default/objects/DC_Data_Type__c/fields/Custom_Length__c.field-meta.xml
<CustomField>
    <fullName>Custom_Length__c</fullName>
    <description>Create masked data of custom length</description>
    <inlineHelpText>Create masked data of custom length</inlineHelpText>
    <label>Custom Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>