oqct-app/main/default/objects/DC_Data_Type__c/fields/Data_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Data_Type_Name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The name of the data type</description>
    <inlineHelpText>The name of the data type</inlineHelpText>
    <label>Data Type Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>