oqct-app/main/default/objects/DC_Data_Type__c/fields/Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain__c</fullName>
    <description>The Email domain to be used as suffix on masking</description>
    <inlineHelpText>The Email domain to be used as suffix on masking</inlineHelpText>
    <label>Email Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>