oqct-app/main/default/objects/DC_Data_Type__c/fields/Match_Object_Field_Length__c.field-meta.xml
<CustomField>
    <fullName>Match_Object_Field_Length__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Match the object&apos;s field length and create masked data of that length</description>
    <inlineHelpText>Match the object&apos;s field length and create masked data of that length</inlineHelpText>
    <label>Match Object Field Length</label>
    <type>Checkbox</type>
</CustomField>