oqct-app/main/default/objects/DC_Data_Type__c/fields/Match_Record_Original_Data_Length__c.field-meta.xml
<CustomField>
    <fullName>Match_Record_Original_Data_Length__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Match the record&apos;s existing data length and create masked data of that length</description>
    <inlineHelpText>Match the record&apos;s existing data length and create masked data of that length</inlineHelpText>
    <label>Match Record Original Data Length</label>
    <type>Checkbox</type>
</CustomField>