oqct-app/main/default/objects/DC_Data_Type__c/fields/Text_Masking_Option__c.field-meta.xml
<CustomField>
    <fullName>Text_Masking_Option__c</fullName>
    <description>Masking pattern option available for text type of data</description>
    <inlineHelpText>Masking pattern option available for text type of data</inlineHelpText>
    <label>Text Masking Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Data_Clean_Data_Type_Text_Mask_Options</valueSetName>
    </valueSet>
</CustomField>