oqct-app/main/default/objects/DC_Data_Type__c/fields/URL_Domain__c.field-meta.xml
<CustomField>
    <fullName>URL_Domain__c</fullName>
    <description>The url domain to be used as suffix on masking</description>
    <inlineHelpText>The url domain to be used as suffix on masking</inlineHelpText>
    <label>URL Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>