oqct-app/main/default/objects/DC_Data_Type__c/fields/Value_Type__c.field-meta.xml
<CustomField>
    <fullName>Value_Type__c</fullName>
    <description>Date Type to be used for date and date time data type while masking</description>
    <inlineHelpText>Date Type to be used for date and date time data type while masking</inlineHelpText>
    <label>Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Random Date</fullName>
            </value>
            <value>
                <fullName>Random Future Date</fullName>
            </value>
            <value>
                <fullName>Random Past Date</fullName>
            </value>
            <value>
                <fullName>Random DateTime</fullName>
            </value>
            <value>
                <fullName>Random Future DateTime</fullName>
            </value>
            <value>
                <fullName>Random Past DateTime</fullName>
            </value>
            <value>
                <fullName>Random Time</fullName>
            </value>
            <value>
                <fullName>Random Location (Latitude)</fullName>
            </value>
            <value>
                <fullName>Random Location (Longitude)</fullName>
            </value>
            <value>
                <fullName>Random Text</fullName>
            </value>
            <value>
                <fullName>Random Currency</fullName>
            </value>
            <value>
                <fullName>Random Percentage</fullName>
            </value>
            <value>
                <fullName>Random Number</fullName>
            </value>
            <value>
                <fullName>Random Email</fullName>
            </value>
            <value>
                <fullName>Random URL</fullName>
            </value>
            <value>
                <fullName>Random Phone</fullName>
            </value>
            <value>
                <fullName>Random Boolean</fullName>
            </value>
            <value>
                <fullName>Random Value Available in Picklist Value Set</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>